revert: Remove whitespace stripping and font forcing as user fixed the source issue.

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -4,7 +4,6 @@
     width: 800px;
     margin: 20px auto;
     font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
 }
 
 #gnn-shortner-form {
